# clerk

./: .gitignore  AGENTS.md  CANON.md  CLAUDE.md  LICENSE  NEXT.md  README.md  clerk.md  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
docs/: decision-contract.md  ledger.md  logger.md  outcomes.md  schema.md  scoring.md
docs/archive/: ledger-usefulness-2026-05-14.md  memex-contract-dryrun-ledger-report-2026-05-14.md  memex-dryrun-clerk-trial-2026-05-14.md
docs/reviews/: memex-contract-dryrun-clerk-trial-2026-05-14.md  memex-dryrun-ledger-report-2026-05-14.md
src/clerk/: __init__.py  cli.py  ledger.py  logger.py  outcomes.py  scoring.py
tests/: test_judgment_schema.py  test_ledger.py  test_logger.py  test_memex_compatibility.py  test_outcomes.py  test_scoring.py
tests/fixtures/: memex_compatibility.json
