[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clerk"
version = "0.1.0"
description = "Domain-neutral supervision primitives for AI work."
requires-python = ">=3.11"

[project.scripts]
clerk = "clerk.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
